kubernetes/infrastructure/base/glauth/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glauth
  labels:
    app.kubernetes.io/name: glauth
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer-production
    external-dns.alpha.kubernetes.io/hostname: auth.skwig.party
    external-dns.alpha.kubernetes.io/target: 192.168.100.47
spec:
  ingressClassName: nginx
  rules:
    - host: auth.skwig.party
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: glauth
                port:
                  name: ldap
  tls:
    - secretName: auth-homelab-tls
      hosts:
        - auth.skwig.party
